Fix columns on small screens

--- a/validphys2/serverscripts/WEB/validphys-reports/report.css
+++ b/validphys2/serverscripts/WEB/validphys-reports/report.css
@@ -1,5 +1,5 @@
 #taglist{
-	column-count: 5;
+	columns: 200px;
 
 }
 h1.title{
